<resources>
    <string name="app_name">Media Player</string>
    <string name="title_home">Home</string>
    <string name="setting">Setting</string>
    <string name="facebook_app_id">392311511833824</string>
    <string name="fb_login_protocol_scheme">fb392311511833824</string>
    <string name="media_player">Media Player</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_here_create_account">New here? Create Account</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="create_your_account">Create your Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here.</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_email">Profile Email</string>
    <string name="signout">SignOut</string>
    <string name="profile_menu">Profile Menu</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="browse_video">Browse Video</string>
    <string name="upload_video">Upload Video</string>
    <string name="video_tittle">Video Tittle</string>
    <string name="video_title">Video Title</string>
    <string name="owner">Owner</string>

</resources>